--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dat.sem3</groupId>
-    <artifactId>rest-jpa-devops-starter</artifactId>
+    <artifactId>2020CA2</artifactId>
     <version>1.0.1</version>
     <packaging>war</packaging>
 
-    <name>jpa-rest-devops-starter</name>
+    <name>2020CA2</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -15,7 +15,7 @@
         
         <!-- TODO: Add the URL to your own tomcat server. Used to deploy your WAR-file -->
         <!-- Important: If your server uses https (via NGINX) use your domain name and https below: -->
-        <remote.server>http://157.230.21.103/manager/text</remote.server>
+        <remote.server>https://cakehr.dk/manager/text</remote.server>
         
     </properties>
     
